--- a/index3.html
+++ b/index3.html
@@ -6,11 +6,11 @@
   </head>
   <body>
       <ul> 
-      <li><a href="1korak.html">1. korak</a></li>
-      <li><a href="2korak.html">2. korak</a></li>
-      <li><a href="3korak.html">3. korak</a></li>
-      <li><a href="4korak.html">4. korak</a></li>
-      <li><a href="5korak.html">5. korak</a></li>
+      <li><a href="index.html">1. korak</a></li>
+      <li><a href="index2.html">2. korak</a></li>
+      <li><a href="index3.html">3. korak</a></li>
+      <li><a href="index4.html">4. korak</a></li>
+      <li><a href="index5.html">5. korak</a></li>
       </ul>
   </body>
 </html>
